--- a/Client/index.html
+++ b/Client/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jumble Quiz</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="logo"></div>
@@ -16,7 +16,7 @@
     <div id="begin-page">
         <button class="btn btn-large" onclick="beginGameSinglePlayer()">Single Player</button>
         <button class="btn btn-large" onclick="beginGameDoublePlayer()">Double Player</button>
-        <button class="btn-large" onclick="enterFullscreen()">Fullscreen</button>
+        <button class="icon-btn" onclick="enterFullscreen()"></button>
     </div>
     <div id="home-page" class="hidden">
         <input type="text" autocomplete="off" autofocus name="user-name" placeholder="Enter your Name" class="username" id="playerName">
@@ -43,6 +43,9 @@
                 <h1>Name</h1>
                 <h1>Position</h1>
             </div>
+            <div id="player-rows-start">
+
+            </div>
         </div>
         <div class="waiting-for-quiz-to-end" id="waiting-for-quizEnd">Waiting for other player's quiz to end...</div>
         <button onclick="continueFromLeaderboard()" class="btn">Continue</button>
@@ -54,13 +57,13 @@
 
 
     <section class="Audio-Section">
-        <audio src="assets/audio/correctAnswer.mp3" id="correctAnswerAudio"></audio>
-        <audio src="assets/audio/optionClick.mp3" id="optionClickAudio"></audio>
-        <audio src="assets/audio/quizCompleted.mp3" id="quizCompletedAudio"></audio>
-        <audio src="assets/audio/wrongAnswer.mp3" id="wrongAnswerAudio"></audio>
+        <audio src="./assets/audio/correctAnswer.mp3" id="correctAnswerAudio"></audio>
+        <audio src="./assets/audio/optionClick.mp3" id="optionClickAudio"></audio>
+        <audio src="./assets/audio/quizCompleted.mp3" id="quizCompletedAudio"></audio>
+        <audio src="./assets/audio/wrongAnswer.mp3" id="wrongAnswerAudio"></audio>
     </section>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="app.js"></script>
-    <script src="quizManager.js"></script>
+    <script src="./socket.io/socket.io.js"></script>
+    <script src="./app.js"></script>
+    <script src="./quizManager.js"></script>
 </body>
 </html>
